--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/app.js"></script>
     <script src="js/whatNow.services.js"></script>
+    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+    <script src="lib/angularfire/angularfire.min.js"></script>
+
 </head>
 <body ng-app="whatNow" ng-controller="WhatNowCtrl">
     <ion-header-bar class="bar-positive">
@@ -44,9 +47,9 @@
                         <label class="item item-input">
                             <span class="input-label">Urgency</span>
                             <select ng-model="newActivity.urgency">
-                                <option>3</option>
-                                <option selected>2</option>
-                                <option>1</option>
+                                <option value=3>Urgent</option>
+                                <option value=2 selected>Needs be done</option>
+                                <option value=1>Not essential</option>
                             </select>
                         </label>
                         <label class="item item-input">
