enable adding a context to firebase

--- a/index.html
+++ b/index.html
@@ -62,22 +62,28 @@
                         </li>
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                                <input type="checkbox">
+                                <input type="checkbox" ng-model="newActivity.home">
                             </label>
                             <i class="icon ion-home"></i> At Home
                         </li>
 
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                                <input type="checkbox">
+                                <input type="checkbox" ng-model="newActivity.errand">
                             </label>
                             <i class="icon ion-bag"></i> Errand
                         </li>
 
+                        <li class="item item-checkbox">
+                            <label class="checkbox">
+                                <input type="checkbox" ng-model="newActivity.computer">
+                            </label>
+                            <i class="icon ion-laptop"></i> At Computer
+                        </li>
 
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                                <input type="checkbox">
+                                <input type="checkbox" ng-model="newActivity.fun">
                             </label>
                             <i class="icon ion-happy"></i> For fun
                         </li>
