enable adding forUsers to firebase

--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                                <input type="checkbox">
+                                <input type="checkbox" ng-model="newActivity.evi">
                             </label>
                             <i class="icon ion-woman"></i> Evi
                         </li>
 
                         <li class="item item-checkbox">
                             <label class="checkbox">
-                                <input type="checkbox">
+                                <input type="checkbox" ng-model="newActivity.toma">
                             </label>
-                            <i class="icon ion-man"></i> Thomas
+                            <i class="icon ion-man"></i> Toma
                         </li>
 
 
