enable adding instructions to firebase

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                         <label class="item item-input">
                             <!--<span class="input-label">Note</span>-->
-                            <textarea placeholder="Instructions"></textarea>
+                            <textarea placeholder="Instructions" ng-model="newActivity.instructions"></textarea>
                         </label>
 
                         <label class="item">
