--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width-device=width">
 
     <link rel="stylesheet" href="lib/ionic/css/ionic.min.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/app.js"></script>
     <script src="js/whatNow.services.js"></script>
