--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/app.js"></script>
     <script src="js/whatNow.services.js"></script>
-    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
-    <script src="lib/angularfire/angularfire.min.js"></script>
+    <!--<script src="https://cdn.firebase.com/v0/firebase.js"></script>-->
+    <!--<script src="lib/angularfire/angularfire.min.js"></script>-->
 
 </head>
 <body ng-app="whatNow">
