--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>What Now</title>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width-device=width">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <!--width-device=width" ?-->
 
     <link rel="stylesheet" href="lib/ionic/css/ionic.min.css"/>
     <link rel="stylesheet" href="css/styles.css"/>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/whatNow.controllers.js"></script>
     <script src="js/whatNow.services.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="lib/angularfire/angularfire.min.js"></script>
