use single form template for adding and editing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="lib/angularfire/angularfire.min.js"></script>
 
 </head>
-<body ng-app="whatNow">
+<body ng-app="whatNow" ng-controller="WhatNowCtrl">
 
 <ion-nav-view></ion-nav-view>
 
