--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/whatNow.controllers.js"></script>
     <script src="js/whatNow.services.js"></script>
     <script src="components/user-bar.js"></script>
+    <script src="components/context-bar.js"></script>
     <script src="js/filters.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="lib/angularfire/angularfire.min.js"></script>
