--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="css/styles.css"/>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/whatNow.controllers.js"></script>
     <script src="js/whatNow.services.js"></script>
     <script src="components/user-bar.js"></script>
     <script src="components/context-bar.js"></script>
+    <script src="components/activities.js"></script>
+    <script src="components/activity.js"></script>
     <script src="js/filters.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="lib/angularfire/angularfire.min.js"></script>
