create momo directive

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="components/context-bar.js"></script>
     <script src="components/activities.js"></script>
     <script src="components/activity.js"></script>
+    <script src="components/momo.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="lib/angularfire/angularfire.min.js"></script>
 
