move activity form into its own directive

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/filters.js"></script>
     <script src="components/user-bar.js"></script>
     <script src="components/context-bar.js"></script>
+    <script src="components/form.js"></script>
     <script src="components/breakdown-list.js"></script>
     <!--<script src="components/activities.js"></script>-->
     <script src="components/activity.js"></script>
